# bitaxetool

./: .gitignore  pyproject.toml
bitaxetool/: __main__.py  bitaxetool.py  nvs_partition_gen.py  validation.py
