[project]
name = "bitaxetool"
version = "0.6"
authors = [
    { name = "johnny9", email = "johnny9dev@pm.me" },
]
description = "Firmware and configuration tool for Bitaxe"
requires-python = ">=3"
dependencies = [
    "esptool",
]

[project.optional-dependencies]
validate = [
    "cerberus==1.3.4",
]

[project.urls]
homepage = "https://github.com/johnny9/bitaxetool"

[project.scripts]
bitaxetool = "bitaxetool:bitaxetool.main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
